// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FormSelectLoadableValues rendering tests FormSelectLoadableValues - with pre-selected value - test 1`] = `
<div>
  <div
    class="grid gap-2"
    data-slot="form-item"
  >
    <label
      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
      data-error="false"
      data-slot="form-label"
      for="_r_2_-form-item"
    >
      Prompt
    </label>
    <div
      data-slot="popover"
      data-testid="mock-react-popover-root"
    >
      <button
        aria-describedby="_r_2_-form-item-description"
        aria-expanded="false"
        aria-invalid="false"
        class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full justify-between font-normal"
        data-slot="popover-trigger"
        data-testid="item-select"
        id="_r_2_-form-item"
        role="combobox"
      >
        <span
          class="truncate"
        >
          Prompt Alpha
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevrons-up-down ml-2 h-4 w-4 shrink-0 opacity-50"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m7 15 5 5 5-5"
          />
          <path
            d="m7 9 5-5 5 5"
          />
        </svg>
      </button>
      <div
        data-testid="mock-react-popover-portal"
      />
    </div>
  </div>
</div>
`;

exports[`FormSelectLoadableValues rendering tests FormSelectLoadableValues - with required - test 1`] = `
<div>
  <div
    class="grid gap-2"
    data-slot="form-item"
  >
    <label
      class="flex items-center text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive gap-1"
      data-error="false"
      data-slot="form-label"
      for="_r_1_-form-item"
    >
      Prompt
      <span
        class="text-destructive"
      >
        *
      </span>
    </label>
    <div
      data-slot="popover"
      data-testid="mock-react-popover-root"
    >
      <button
        aria-describedby="_r_1_-form-item-description"
        aria-expanded="false"
        aria-invalid="false"
        class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full justify-between font-normal"
        data-slot="popover-trigger"
        data-testid="item-select"
        id="_r_1_-form-item"
        role="combobox"
      >
        <span
          class="truncate"
        >
          Prompt auswählen…
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevrons-up-down ml-2 h-4 w-4 shrink-0 opacity-50"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m7 15 5 5 5-5"
          />
          <path
            d="m7 9 5-5 5 5"
          />
        </svg>
      </button>
      <div
        data-testid="mock-react-popover-portal"
      />
    </div>
  </div>
</div>
`;

exports[`FormSelectLoadableValues rendering tests FormSelectLoadableValues - without required - test 1`] = `
<div>
  <div
    class="grid gap-2"
    data-slot="form-item"
  >
    <label
      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
      data-error="false"
      data-slot="form-label"
      for="_r_0_-form-item"
    >
      Prompt
    </label>
    <div
      data-slot="popover"
      data-testid="mock-react-popover-root"
    >
      <button
        aria-describedby="_r_0_-form-item-description"
        aria-expanded="false"
        aria-invalid="false"
        class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full justify-between font-normal"
        data-slot="popover-trigger"
        data-testid="item-select"
        id="_r_0_-form-item"
        role="combobox"
      >
        <span
          class="truncate"
        >
          Prompt auswählen…
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevrons-up-down ml-2 h-4 w-4 shrink-0 opacity-50"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m7 15 5 5 5-5"
          />
          <path
            d="m7 9 5-5 5 5"
          />
        </svg>
      </button>
      <div
        data-testid="mock-react-popover-portal"
      />
    </div>
  </div>
</div>
`;

exports[`SelectCommandEmpty rendering tests SelectCommandEmpty - isLoading false - shows empty message - test 1`] = `
<div>
  <div
    class="bg-popover text-popover-foreground flex h-full w-full flex-col overflow-hidden rounded-md"
    cmdk-root=""
    data-slot="command"
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_1d_"
      id="radix-_r_1c_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    />
    <div
      aria-label="Suggestions"
      class="max-h-[300px] scroll-py-1 overflow-x-hidden overflow-y-auto"
      cmdk-list=""
      data-slot="command-list"
      id="radix-_r_1b_"
      role="listbox"
      tabindex="-1"
    >
      <div
        cmdk-list-sizer=""
      >
        <div
          class="py-6 text-center text-sm"
          cmdk-empty=""
          data-slot="command-empty"
          role="presentation"
        >
          Kein Prompt gefunden.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectCommandEmpty rendering tests SelectCommandEmpty - isLoading true - shows spinner - test 1`] = `
<div>
  <div
    class="bg-popover text-popover-foreground flex h-full w-full flex-col overflow-hidden rounded-md"
    cmdk-root=""
    data-slot="command"
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_1a_"
      id="radix-_r_19_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    />
    <div
      aria-label="Suggestions"
      class="max-h-[300px] scroll-py-1 overflow-x-hidden overflow-y-auto"
      cmdk-list=""
      data-slot="command-list"
      id="radix-_r_18_"
      role="listbox"
      tabindex="-1"
    >
      <div
        cmdk-list-sizer=""
      >
        <div
          class="py-6 text-center text-sm"
          cmdk-empty=""
          data-slot="command-empty"
          role="presentation"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-loader mx-auto h-4 w-4 animate-spin text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2v4"
            />
            <path
              d="m16.2 7.8 2.9-2.9"
            />
            <path
              d="M18 12h4"
            />
            <path
              d="m16.2 16.2 2.9 2.9"
            />
            <path
              d="M12 18v4"
            />
            <path
              d="m4.9 19.1 2.9-2.9"
            />
            <path
              d="M2 12h4"
            />
            <path
              d="m4.9 4.9 2.9 2.9"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectCommandItem rendering tests SelectCommandItem - not selected - test 1`] = `
<div>
  <div
    class="bg-popover text-popover-foreground flex h-full w-full flex-col overflow-hidden rounded-md"
    cmdk-root=""
    data-slot="command"
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_1g_"
      id="radix-_r_1f_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    />
    <div
      aria-label="Suggestions"
      class="max-h-[300px] scroll-py-1 overflow-x-hidden overflow-y-auto"
      cmdk-list=""
      data-slot="command-list"
      id="radix-_r_1e_"
      role="listbox"
      tabindex="-1"
    >
      <div
        cmdk-list-sizer=""
      >
        <div
          class="text-foreground [&_[cmdk-group-heading]]:text-muted-foreground overflow-hidden p-1 [&_[cmdk-group-heading]]:px-2 [&_[cmdk-group-heading]]:py-1.5 [&_[cmdk-group-heading]]:text-xs [&_[cmdk-group-heading]]:font-medium"
          cmdk-group=""
          data-slot="command-group"
          data-value="undefined"
          role="presentation"
        >
          <div
            cmdk-group-items=""
            role="group"
          >
            <div
              aria-disabled="false"
              aria-selected="true"
              class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
              cmdk-item=""
              data-disabled="false"
              data-selected="true"
              data-slot="command-item"
              data-value="Test Prompt"
              id="radix-_r_1j_"
              role="option"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check mr-2 h-4 w-4 opacity-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              Test Prompt
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectCommandItem rendering tests SelectCommandItem - selected - test 1`] = `
<div>
  <div
    class="bg-popover text-popover-foreground flex h-full w-full flex-col overflow-hidden rounded-md"
    cmdk-root=""
    data-slot="command"
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_1m_"
      id="radix-_r_1l_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    />
    <div
      aria-label="Suggestions"
      class="max-h-[300px] scroll-py-1 overflow-x-hidden overflow-y-auto"
      cmdk-list=""
      data-slot="command-list"
      id="radix-_r_1k_"
      role="listbox"
      tabindex="-1"
    >
      <div
        cmdk-list-sizer=""
      >
        <div
          class="text-foreground [&_[cmdk-group-heading]]:text-muted-foreground overflow-hidden p-1 [&_[cmdk-group-heading]]:px-2 [&_[cmdk-group-heading]]:py-1.5 [&_[cmdk-group-heading]]:text-xs [&_[cmdk-group-heading]]:font-medium"
          cmdk-group=""
          data-slot="command-group"
          data-value="undefined"
          role="presentation"
        >
          <div
            cmdk-group-items=""
            role="group"
          >
            <div
              aria-disabled="false"
              aria-selected="true"
              class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
              cmdk-item=""
              data-disabled="false"
              data-selected="true"
              data-slot="command-item"
              data-value="Test Prompt"
              id="radix-_r_1p_"
              role="option"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check mr-2 h-4 w-4 opacity-100"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              Test Prompt
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
